--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -8,6 +8,15 @@
     <!-- Distill js -->
     <script src="{{ '/assets/js/distillpub/template.v2.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/distillpub/transforms.v2.js' | relative_url }}"></script>
+    {% if page.py-env %}
+      <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+      <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+      <py-env>
+        {% for package in page.py-env %}
+          - {{ package }}
+        {% endfor %}
+      </py-env>
+    {%- endif %}
     {% if page._styles %}
     <!-- Page/Post style -->
     <style type="text/css">
