--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -2,6 +2,18 @@
  * Style overrides for distill blog posts.
  ******************************************************************************/
 
+
+d-code {
+  background-color: whitesmoke;
+  border-radius: 6px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 1px;
+  padding-right: 1px;
+  font-size: 16px
+}
+
+
 d-byline {
   border-top-color: var(--global-divider-color) !important;
 }
