--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -478,13 +478,12 @@ footer.sticky-bottom {
     padding-top: 1rem;
     margin-top: 2rem;
     margin-bottom: -2rem;
-    text-align: right;
+    text-align: left;
   }
   ol.bibliography {
     list-style: none;
     padding: 0;
     margin-top: 10px;
-    width: 100%;
 
     li {
       margin-bottom: 1rem;
