--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -100,6 +100,8 @@
             {%- capture entrytype -%}<em>{{entry.journal}}</em>{%- endcapture -%}
           {%- elsif entry.type == "inproceedings" -%}
             {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
+          {%- elsif entry.type == "phdthesis" -%}
+            {%- capture entrytype -%}PhD thesis, {{entry.school}},{%- endcapture -%}
           {%- else -%}
             {%- capture entrytype -%}{%- endcapture -%}
           {%- endif -%}
