--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -114,5 +114,6 @@
     
     {% include scripts/bootstrap.html %}
     {% include scripts/analytics.html %}
+    {% include scripts/progressBar.html %}
   </body>
 </html>
