--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -10,8 +10,19 @@
     <script src="{{ '/assets/js/distillpub/template.v2.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/distillpub/transforms.v2.js' | relative_url }}"></script>
     {% if page.py-env %}
-      <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-      <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+      {% if page.py-ver == "latest" %}
+        <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+        <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+      {% elsif page.py-ver == "alpha" %}
+        <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+        <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+      {% elsif page.py-ver %}
+      <link rel="stylesheet" href="https://pyscript.net/releases/{{ page.py-ver }}/pyscript.css" />
+      <script defer src="https://pyscript.net/releases/{{ page.py-ver }}/pyscript.js"></script>
+      {% else %}
+        <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+        <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+      {% endif %}
       <py-env>
         {% for package in page.py-env %}
           - {{ package }}
