--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,25 +2,25 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
-        {%- if site.impressum_path -%}
-        <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
-        {%- endif -%}
         {%- if site.last_updated -%}
         Last updated: {{ "now" | date: '%B %d, %Y' }}.
         {%- endif %}
+        {%- if site.impressum_path -%}
+        <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
+        {%- endif -%}
       </div>
     </footer>
     {%- else -%}
     <footer class="sticky-bottom mt-5">
       <div class="container">
         &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
-        {%- if site.impressum_path -%}
-        <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
-        {%- endif -%}
         {%- if site.last_updated -%}
-        Last updated: {{ "now" | date: '%b %d, %Y' }}.
+        Last updated: {{ "now" | date: '%b %d, %Y' }}. {{ }}
         {%- endif %}
-        <a href="{{ site.url }}{{ site.baseurl }}/privacy-policy">Privacy Policy</a>.
+        {%- if site.impressum_path -%}
+        <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>. {{ }}
+        {%- endif -%}
+        <a href="{{ site.url }}{{ site.baseurl }}{{ site.privacy_path }}">Privacy Policy</a>.
       </div>
     </footer>
     {%- endif %}
