--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,12 @@
       <div class="container mt-0">
         &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
         {%- if site.last_updated -%}
-        Last updated: {{ "now" | date: '%B %d, %Y' }}.
+        Last updated: {{ "now" | date: '%B %d, %Y' }}. {{ }}
         {%- endif %}
         {%- if site.impressum_path -%}
-        <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
+        <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>. {{ }}
         {%- endif -%}
+        <a href="{{ site.url }}{{ site.baseurl }}{{ site.privacy_path }}">Privacy Policy</a>.
       </div>
     </footer>
     {%- else -%}
