--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
         {%- if site.impressum_path -%}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>. {{ }}
         {%- endif -%}
-        <a href="{{ site.url }}{{ site.baseurl }}{{ site.privacy_path }}">Privacy Policy</a>.
+        <!-- <a href="{{ site.url }}{{ site.baseurl }}{{ site.privacy_path }}">Privacy Policy</a>. -->
       </div>
     </footer>
     {%- else -%}
