--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -160,7 +160,7 @@ blockquote {
 .navbar.navbar-light {
   a {
     &:hover {
-      text-decoration: none;
+      text-decoration: line;
     }
   }
   .navbar-brand {
@@ -248,7 +248,7 @@ blockquote {
 .social {
   text-align: center;
   .contact-icons {
-    font-size: 4rem;
+    font-size: 2rem;
     a {
       i::before {
         color: var(--global-text-color);
@@ -330,7 +330,7 @@ footer.sticky-bottom {
   padding-bottom: 3rem;
   h1 {
     color: var(--global-theme-color);
-    font-size: 5rem;
+    font-size: 6rem;
   }
 }
 
