--- a/_includes/scripts/analytics.html
+++ b/_includes/scripts/analytics.html
@@ -1,6 +1,9 @@
-{%- if site.enable_google_analytics -%}
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YH1WDJ2EQW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-{%- endif -%}
-{%- if site.enable_panelbear_analytics -%}
-
-{%- endif -%}
+  gtag('config', 'G-YH1WDJ2EQW');
+</script>
