--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -41,17 +41,23 @@ layout: default
           </div>
           <hr>
 
-          {% if page.news -%}
           <!-- News -->
-          {%- include news.html %}
-          <hr>
+          {% if page.news and site.announcements.enabled -%}
+            <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
+            {%- include news.html limit=true %}
           {%- endif %}
+
+          <!-- Latest posts -->
+          {% if page.latest_posts -%}
+            <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">latest posts</a></h2>
+            {%- include latest_posts.html %}
+          {%- endif %}
+
+          <!-- Selected papers -->
           {% if page.selected_papers -%}
-            <!-- Selected papers -->
+            <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">selected publications</a></h2>
             {%- include selected_papers.html %}
-          <hr>
           {%- endif %}
-          {%- if page.social %}
           <!-- Social -->
           <div class="social">
             <div class="contact-icons">
