--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,22 +42,15 @@ layout: default
           <hr>
 
           <!-- News -->
-          {% if page.news and site.announcements.enabled -%}
-            <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
-            {%- include news.html limit=true %}
+          {%- include news.html %}
+          <hr>
           {%- endif %}
-
-          <!-- Latest posts -->
-          {% if page.latest_posts -%}
-            <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">latest posts</a></h2>
-            {%- include latest_posts.html %}
-          {%- endif %}
-
-          <!-- Selected papers -->
           {% if page.selected_papers -%}
-            <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">selected publications</a></h2>
+            <!-- Selected papers -->
             {%- include selected_papers.html %}
+          <hr>
           {%- endif %}
+          {%- if page.social %}
           <!-- Social -->
           <div class="social">
             <div class="contact-icons">
